change style; added dummy tokens;

--- a/static/style.css
+++ b/static/style.css
@@ -109,3 +109,16 @@ button:hover {
     border: 0;
   }
 }
+
+/* CHECK FORM */
+.glyphicon {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
